--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 <div class="container">
     <header>
-        <p> < Mariana Dias /> </p>
-        <nav>Sobre </nav>
-        <nav>Skills</nav>
-        <nav>Projetos</nav>
-        <nav>Contato</nav>
+        <p> < Mariana Dias /></p>
+        <nav><a href="#about">Sobre</a></nav>
+        <nav><a href="#skills">Skills</a></nav>
+        <nav><a href="#projects">Projetos</a></nav>
+        <nav><a href="#contact">Contato</a></nav>
     </header>
 
     <div class="main-content">
@@ -46,7 +46,7 @@
 </div>
 
 
-<div class="SkillsContainer">
+<div id="skills" class="SkillsContainer">
     <p>< Skills /></p>
     <div class="skills">
         <div class="skills-grid">
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<div class="projects">
+<div id="projects" class="projects">
     <p>< Projetos /></p>
     <div class="projects-grid">
         <div class="project">
@@ -124,7 +124,7 @@
 
 </div>
 
-<div class="contact">
+<div id="contact" class="contact">
     <p class="title">< Contatos /></p>
     <p class="descrition">
         Se você se interessou pelo meu trabalho ou tem alguma dúvida, entre em contato comigo. Será um prazer conversar com você! <br> (clique no icone e fale comigo)
@@ -141,7 +141,9 @@
 
 
 
-
+<footer>
+    <p>&copy; 2024 Mariana Dias. Todos os direitos reservados.</p>
+</footer>
 
 </div>
 
