--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <body>
 <div class="container">
     <header>
-        <p> < Mariana Dias /></p>
-        <nav><a href="#about">Sobre</a></nav>
-        <nav><a href="#skills">Skills</a></nav>
-        <nav><a href="#projects">Projetos</a></nav>
-        <nav><a href="#contact">Contato</a></nav>
+        <p>< Mariana Dias /></p>
+        <div class="menu-icon" id="menu-icon">&#9776;</div>
+        <nav class="menu" id="menu">
+            <a href="#about">Sobre</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projetos</a>
+            <a href="#contact">Contato</a>
+        </nav>
     </header>
-
     <div class="main-content">
         <div class="presentation">
             <p class="function">Desenvolvedora Front-End</p>
             <p class="name">Mariana Dias</p>
-            <p class="description">Olá, sou uma desenvolvedora Front ent, possuo 19 anos e atualmente estou 
+            <p class="description">Olá, sou uma desenvolvedora Front end, possuo 19 anos e atualmente estou 
                 cursando Análise e desenvolvimento de sistemas, pela Puc-virtual (2 periodo).
                 Sou uma pessoa que está sempre em busca de novos desafios para crescer profissionalmente.</p>
             <div class="resume">
@@ -147,5 +149,9 @@
 
 </div>
 
+
+
+
+<script src="script.js"></script>
 </body>
 </html>
